--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "google-libphonenumber": "^3.2.33",
+    "i18next": "^23.7.11",
+    "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "react-i18next": "^14.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/google-libphonenumber": "^7.4.30",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "i": "^0.3.7",
+    "sass": "^1.69.5",
+    "typescript": "^5"
   }
 }
