--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.8",
     "google-libphonenumber": "^3.2.33",
+    "graphql": "^16.8.1",
     "i18next": "^23.7.11",
+    "js-cookie": "^3.0.5",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
@@ -18,12 +21,14 @@
   },
   "devDependencies": {
     "@types/google-libphonenumber": "^7.4.30",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "i": "^0.3.7",
+    "if": "^2.0.0",
     "sass": "^1.69.5",
     "typescript": "^5"
   }
