--- a/package.json
+++ b/package.json
@@ -1,49 +1,49 @@
 {
-  "name": "cherry-pick",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@apollo/client": "^3.8.8",
-    "google-libphonenumber": "^3.2.33",
-    "graphql": "^16.8.1",
-    "i18next": "^23.7.11",
-    "js-cookie": "^3.0.5",
-    "jwt-decode": "^4.0.0",
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-i18next": "^14.0.0"
-  },
-  "devDependencies": {
-    "@types/google-libphonenumber": "^7.4.30",
-    "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "i": "^0.3.7",
-    "if": "^2.0.0",
-    "sass": "^1.69.5",
-    "typescript": "^5"
-  },
-  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
-  "main": "next.config.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Genimax/event-frontend.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Genimax/event-frontend/issues"
-  },
-  "homepage": "https://github.com/Genimax/event-frontend#readme"
+	"name": "cherry-pick",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"log": "node createRepoFile.js"
+	},
+	"dependencies": {
+		"axios": "^1.6.5",
+		"google-libphonenumber": "^3.2.33",
+		"i18next": "^23.7.11",
+		"js-cookie": "^3.0.5",
+		"jwt-decode": "^4.0.0",
+		"next": "14.0.4",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-i18next": "^14.0.0"
+	},
+	"devDependencies": {
+		"@types/google-libphonenumber": "^7.4.30",
+		"@types/js-cookie": "^3.0.6",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"eslint": "^8",
+		"eslint-config-next": "14.0.4",
+		"i": "^0.3.7",
+		"if": "^2.0.0",
+		"sass": "^1.69.5",
+		"typescript": "^5"
+	},
+	"description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+	"main": "next.config.js",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Genimax/event-frontend.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/Genimax/event-frontend/issues"
+	},
+	"homepage": "https://github.com/Genimax/event-frontend#readme"
 }
